--- a/src/app/components/modals/modal.tag.component.html
+++ b/src/app/components/modals/modal.tag.component.html
@@ -1,34 +1,29 @@
-<h1 mat-dialog-title>Add Tags</h1>
-<div mat-dialog-content>
+<div class="modal-header">
+  <h5 class="modal-title">Add Tags</h5>
+  <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="onNoClick()">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+<div class="modal-body">
   <form>
-    <mat-form-field class="full-width-input">
-      <mat-chip-list #tagList aria-label="Tag selection">
-        <mat-chip
-          *ngFor="let tag of localTags"
-          [selectable]="false"
-          [removable]="true"
-          (removed)="removeTag(tag)">
-          {{ tag }}
-          <mat-icon matChipRemove>cancel</mat-icon>
-        </mat-chip>
-        <input
-          #tagInput
-          placeholder="Add Tag..."
-          [formControl]="tagCtrl"
-          [matAutocomplete]="auto"
-          [matChipInputFor]="tagList"
-          [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-          (matChipInputTokenEnd)="addTag($event)">
-      </mat-chip-list>
-      <mat-autocomplete autoActivateFirstOption #auto="matAutocomplete" (optionSelected)="selectedTag($event)">
-        <mat-option *ngFor="let tag of tagAutoComplete$ | async; let index = index" [value]="tag">
-          {{ tag }}
-        </mat-option>
-      </mat-autocomplete>
-    </mat-form-field>
+    <div class="form-group">
+      <h6 *ngFor="let tag of localTags; let i = index" class="d-inline mr-1">
+        <span class="badge badge-pill badge-secondary">
+          <label class="align-middle ml-1 mb-0 mr-1 font-14 font-weight-normal">{{tag}}</label>
+          <span role="button" id="chip-{{i}}" class="material-icons align-middle font-20 p-1"
+            (mouseenter)="toggleChipCancel('chip-'+i)" (mouseleave)="toggleChipCancel('chip-'+i)"
+            (click)="removeTag(tag)">
+            close
+          </span>
+        </span>
+      </h6>
+    </div>
+    <div class="form-group">
+      <input #ngbTypeahead type="text" class="form-control mr-sm-2" placeholder="Search for tags" [ngbTypeahead]="tags" (selectItem)="selectedTag($event)"/>
+    </div>
   </form>
 </div>
-<div mat-dialog-actions>
-  <button mat-button class="float-right" (click)="onNoClick()">Close</button>
-  <button mat-button class="float-right" (click)="addTags()">Save</button>
+<div class="modal-footer">
+  <button type="button" class="btn btn-light" data-dismiss="modal" (click)="onNoClick()">Close</button>
+  <button type="button" class="btn btn-outline-success" (click)="addTags()">Save</button>
 </div>
