--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,36 +15,36 @@
         <!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"> -->
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
-      <button mat-icon-button aria-label="add tags" *ngIf="router.url.startsWith('/home') && multiselect" (click)="openTagDialog()" matTooltip="tag selected items">
-        <mat-icon>local_offer</mat-icon>
-      </button>
-      <button mat-icon-button aria-label="map to event" *ngIf="router.url.startsWith('/home') && multiselect" (click)="openEventDialog()" matTooltip="tag selected items">
-        <mat-icon>event_note</mat-icon>
-      </button>
-      <span role="button" aria-label="grant access" *ngIf="(router.url == '/home' || router.url == '/events') && multiselect" (click)="openAccessDialog()" class="material-icons">
+      <span role="button" *ngIf="router.url.startsWith('/home') && multiselect" (click)="openTagDialog()" class="material-icons" ngbTooltip="tag selected items">
+        local_offer
+      </span>
+      <span role="button" *ngIf="router.url.startsWith('/home') && multiselect" (click)="openEventDialog()" class="material-icons" ngbTooltip="map to events">
+        event_note
+      </span>
+      <span role="button" *ngIf="(router.url == '/home' || router.url == '/events') && multiselect" (click)="openAccessDialog()" class="material-icons" ngbTooltip="map group access">
         group_add
       </span>
-      <button mat-icon-button aria-label="delete" *ngIf="router.url.startsWith('/home') && multiselect" (click)="openDeleteDialog()" matTooltip="delete selected items">
-        <mat-icon>delete_forever</mat-icon>
-      </button>
-      <button mat-icon-button aria-label="cancel multiselect" *ngIf="router.url.startsWith('/home') && multiselect" (click)="toggleMultiselect(false)" matTooltip="cancel selection">
-        <mat-icon>cancel</mat-icon>
-      </button>
-      <span role="button" aria-label="multiselect" *ngIf="(router.url == '/home' || router.url == '/events') && !multiselect" (click)="toggleMultiselect(true)" class="material-icons">
+      <span role="button" *ngIf="router.url.startsWith('/home') && multiselect" (click)="openDeleteDialog()" class="material-icons" ngbTooltip="delete selected items">
+        delete_forever
+      </span>
+      <span role="button" *ngIf="router.url.startsWith('/home') && multiselect" (click)="toggleMultiselect(false)" class="material-icons" ngbTooltip="cancel selection">
+        cancel
+      </span>
+      <span role="button" *ngIf="(router.url == '/home' || router.url == '/events') && !multiselect" (click)="toggleMultiselect(true)" class="material-icons" ngbTooltip="enable multiselect">
         flip_to_front
       </span>
-      <button mat-icon-button aria-label="Add Event" *ngIf="router.url == '/events'">
-        <mat-icon>add</mat-icon>
-      </button>
+      <span role="button" *ngIf="router.url == '/events'" class="material-icons" ngbTooltip="create new event">
+        add
+      </span>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item" ngbDropdown display="dynamic" placement="bottom-right">
           <a class="nav-link" tabindex="0" ngbDropdownToggle id="navbarDropdown3" role="button">
             <mat-icon>more_vert</mat-icon>
           </a>
           <div ngbDropdownMenu aria-labelledby="navbarDropdown3" class="dropdown-menu">
-            <a ngbDropdownItem href="#" routerLink="/upload">Upload</a>
-            <a ngbDropdownItem href="#" routerLink="/settings">Settings</a>
-            <a ngbDropdownItem href="#" (click)="doLogout()">Logout</a>
+            <a ngbDropdownItem routerLink="/upload">Upload</a>
+            <a ngbDropdownItem routerLink="/settings">Settings</a>
+            <a ngbDropdownItem (click)="doLogout()">Logout</a>
           </div>
         </li>
       </ul>
