--- a/src/app/components/modals/modal.usergroup.component.html
+++ b/src/app/components/modals/modal.usergroup.component.html
@@ -1,12 +1,30 @@
-<h1 mat-dialog-title>{{ data.title }}</h1>
-<div mat-dialog-content>
-  <p>Owner: {{ data.creator }}</p>
-  <mat-list dense>
-    <mat-list-item *ngFor="let user of data.users">
-      {{ user }}
-    </mat-list-item>
-  </mat-list>
+<div class="modal-header">
+  <h5 class="modal-title">Grant Access to Groups</h5>
+  <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="onNoClick()">
+    <span aria-hidden="true">&times;</span>
+  </button>
 </div>
-<div mat-dialog-actions>
-  <button mat-button class="float-right" (click)="onNoClick()">Close</button>
+<div class="modal-body">
+  <form>
+    <div class="form-group">
+      <h6 *ngFor="let group of localGroups; let i = index" class="d-inline mr-1">
+        <span class="badge badge-pill badge-secondary">
+          <label class="align-middle ml-1 mb-0 mr-1 font-14 font-weight-normal">{{group.title}}</label>
+          <span role="button" id="chip-{{i}}" class="material-icons align-middle font-20 p-1"
+            (mouseenter)="toggleChipCancel('chip-'+i)" (mouseleave)="toggleChipCancel('chip-'+i)"
+            (click)="removeGroup(group)">
+            close
+          </span>
+        </span>
+      </h6>
+    </div>
+    <div class="form-group">
+      <input #ngbTypeahead type="text" class="form-control mr-sm-2" placeholder="Search for events"
+        [ngbTypeahead]="groups" [resultFormatter]="formatter" [editable]="false" (selectItem)="selectedGroup($event)" />
+    </div>
+  </form>
+</div>
+<div class="modal-footer">
+  <button type="button" class="btn btn-light" data-dismiss="modal" (click)="onNoClick()">Close</button>
+  <button type="button" class="btn btn-outline-success" (click)="addGroups()">Save</button>
 </div>
