--- a/src/app/components/media/media.list.component.html
+++ b/src/app/components/media/media.list.component.html
@@ -36,7 +36,8 @@
           </svg>
         </ng-template>
       </div>
-      <img src="{{m.urlThumb}}" alt="{{m.title}}" [routerLink]="['/media/' + m.id]" />
+      <img [src]="thumbURL(m)" alt="{{m.title}}" [routerLink]="['/media/' + m.id]" />
+      <!-- <img src="{{m.urlThumb}}" alt="{{m.title}}" [routerLink]="['/media/' + m.id]" /> -->
     </div>
   </virtual-scroller>
 </div>
