--- a/src/app/components/setting/setting.component.html
+++ b/src/app/components/setting/setting.component.html
@@ -125,12 +125,12 @@
                   <div class="row">
                     <div class="col-6">
                       <mat-form-field class="full-width-input">
-                        <input matInput placeholder="Address" [value]="node.address" (input)="node.address = $event.target.value">
+                        <input matInput placeholder="API Endpoint" [value]="node.APIEndpoint" (input)="node.APIEndpoint = $event.target.value">
                       </mat-form-field>
                     </div>
                     <div class="col-6">
                       <mat-form-field class="full-width-input">
-                        <input matInput placeholder="IPFS API Port" [value]="node.ipfsApiPort" (input)="node.ipfsApiPort = parseNumber($event.target.value, 10)">
+                        <input matInput placeholder="Data Endpoint" [value]="node.dataEndpoint" (input)="node.dataEndpoint = $event.target.value">
                       </mat-form-field>
                     </div>
                   </div>
