--- a/src/app/components/media/media.component.html
+++ b/src/app/components/media/media.component.html
@@ -6,26 +6,26 @@
       </ng-container>
       <ng-template #video>
         <vg-player>
-          <vg-controls>
+          <vg-scrub-bar>
+            <vg-scrub-bar-current-time></vg-scrub-bar-current-time>
+            <vg-scrub-bar-buffering-time></vg-scrub-bar-buffering-time>
+        </vg-scrub-bar>
+          <vg-controls [vgAutohide]="true" [vgAutohideTime]="2">
               <vg-play-pause></vg-play-pause>
               <vg-playback-button></vg-playback-button>
 
               <vg-time-display vgProperty="current" vgFormat="mm:ss"></vg-time-display>
-
-              <vg-scrub-bar>
-                  <vg-scrub-bar-current-time></vg-scrub-bar-current-time>
-                  <vg-scrub-bar-buffering-time></vg-scrub-bar-buffering-time>
-              </vg-scrub-bar>
-
+              <div class="vg-control-text">
+                <span role="button" class="" >/</span>
+              </div>
               <vg-time-display vgProperty="total" vgFormat="mm:ss"></vg-time-display>
 
-              <vg-mute></vg-mute>
+              <vg-mute class="ml-auto"></vg-mute>
               <vg-volume></vg-volume>
               <a class="vg-download" [href]="url()" download>
                 <div>
-                  <span role="button" class="material-icons" >
+                  <span role="button" class="material-icons">
                     get_app
-
                   </span>
                 </div>
               </a>
