--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,11 +49,11 @@
             highlight_alt
           </span>
         </li>
-        <li class="nav-item" *ngIf="router.url == '/events'">
+        <!-- <li class="nav-item" *ngIf="router.url == '/events'">
           <span role="button" class="material-icons nav-link" ngbTooltip="create new event">
             add
           </span>
-        </li>
+        </li> -->
       </ul>
 
       <ul class="navbar-nav">
