--- a/src/app/components/modals/modal.usergroup.component.html
+++ b/src/app/components/modals/modal.usergroup.component.html
@@ -19,7 +19,7 @@
       </h6>
     </div>
     <div class="form-group">
-      <input #ngbTypeahead type="text" class="form-control mr-sm-2" placeholder="Search for events"
+      <input #ngbTypeahead type="text" class="form-control mr-sm-2" placeholder="Search for groups"
         [ngbTypeahead]="groups" [resultFormatter]="formatter" [editable]="false" (selectItem)="selectedGroup($event)" />
     </div>
   </form>
