--- a/src/app/components/modals/modal.media.view.component.html
+++ b/src/app/components/modals/modal.media.view.component.html
@@ -19,16 +19,16 @@
     <span class="material-icons">close</span>
   </button>
 </div>
-<!-- <a role="button" class="carousel-control-prev" style="top:63px;justify-content: flex-end;width:7%" (click)="previous()">
+<a role="button" class="carousel-control-prev" style="top:63px;justify-content: flex-end;width:7%;z-index:5000;" (click)="previous()">
   <span aria-hidden="true" class="carousel-control-prev-icon"></span>
   <span class="sr-only">Previous</span>
 </a>
-<a role="button" class="carousel-control-next" style="top:63px;justify-content: flex-start;width:7%" (click)="next()">
+<a role="button" class="carousel-control-next" style="top:63px;justify-content: flex-start;width:7%;z-index:5000;" (click)="next()">
   <span aria-hidden="true" class="carousel-control-next-icon"></span>
   <span class="sr-only">Next</span>
-</a> -->
+</a>
 <div class="modal-body" style="padding:1rem 0;">
-  <swiper [slidesPerView]="1" [virtual]="true" [navigation]="{}" (swiper)="onSwiper($event)"
+  <swiper [slidesPerView]="1" [virtual]="true" [threshold]="50" [initialSlide]="dataIndex" (swiper)="onSwiper($event)"
     (slideChange)="onSlideChange()">
     <ng-container *ngFor="let m of data; index as i">
 
